--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "the-butler"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Harsh <hdadhich01@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
