--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pandas = "^1.1.5"
 ordinal = "^1.0.3"
 bitlyshortener = "^0.5.1"
 portolan = "^1.0.1"
+emoji = "^1.2.0"
+html2text = "^2020.1.16"
 
 [tool.poetry.dev-dependencies]
 
