--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ emoji = "^1.2.0"
 html2text = "^2020.1.16"
 discord = "^1.0.1"
 art = "^5.1"
+humanize = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
 
