--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ psutil = "^5.8.0"
 aiohttp = "^3.7.4"
 pytz = "^2021.1"
 ordinal = "^1.0.3"
+imutils = "^0.5.4"
+opencv-python = "^4.5.1"
+scikit-image = "^0.18.1"
 
 [tool.poetry.dev-dependencies]
 
