--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ html2text = "^2020.1.16"
 portolan = "^1.0.1"
 psutil = "^5.8.0"
 ordinal = "^1.0.3"
+Pillow = "^8.3.1"
 
 [tool.poetry.dev-dependencies]
 
