--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ portolan = "^1.0.1"
 psutil = "^5.8.0"
 ordinal = "^1.0.3"
 Pillow = "^8.3.1"
+colorthief = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 
