--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ Pillow = "^8.3.1"
 colorthief = "^0.2.1"
 "discord.py" = "^1.7.3"
 pytimeparse = "^1.1.8"
+asyncpg = "^0.24.0"
+utils = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
